docmd-main/v08/en/plugins/usage.md
---
title: "Using Plugins"
description: "Install, configure, and manage docmd plugins - from required defaults to optional add-ons."
---

`docmd` features a modular plugin architecture. Required plugins ship with the core and need no installation. Optional plugins can be installed with a single CLI command.

## Installing Plugins

Use the `docmd` CLI to install and remove plugins:

```bash
# Install a plugin
docmd add <plugin-name>

# Remove a plugin
docmd remove <plugin-name>
```

The installer automatically detects your package manager (npm, pnpm, yarn, or bun), resolves short names to full package names, and injects the plugin config into your `docmd.config.json`.

Use `--verbose` (or `-V`) for full installer output:

```bash
docmd add <plugin-name> -V
```

## Required Plugins

These plugins are bundled with `@docmd/core` - no installation needed. Enable them in your `docmd.config.json`:

```json
  "plugins": {
    "search": {},                        
    "seo": { "aiBots": false },            
    "sitemap": {},                       
    "analytics": {},                     
    "llms": {},                          
    "mermaid": {},                       
    "git": {}                            
  }
```

::: callout tip "Git Plugin"
The Git plugin automatically detects if your project is in a Git repository. If not, it gracefully disables itself. No configuration is needed for basic last-updated timestamps - just ensure your docs are in a Git repo.
:::

## Optional Plugins

Optional plugins require installation before enabling.

| Plugin | Install Command | Description |
| :--- | :--- | :--- |
| [PWA](pwa.md) | `docmd add pwa` | Progressive Web App support with offline caching |
| [Threads](threads.md) | `docmd add threads` | Inline discussion comments stored in your markdown |
| [Math](math.md) | `docmd add math` | Native KaTeX and LaTeX mathematics integration |

## Auto-Installation

When you add an official plugin to your `docmd.config.json` that isn't installed, docmd automatically downloads and installs it on the next build. This works for all plugins in the [official registry](/plugins/usage).

```json
{
  "plugins": {
    "pwa": {}
  }
}
```

The auto-installer:
- Only works for official `@docmd/plugin-*` packages listed in the docmd registry
- Installs the exact version matching your `@docmd/core` version
- Uses your project's package manager (npm, pnpm, yarn, or bun)
- Shows progress in the terminal

## Third-Party & Custom Plugins

Because `docmd add <plugin>` and the auto-installer strictly enforce an official registry allowlist for security, third-party and custom community plugins must be installed natively using your package manager:

```bash
npm install my-custom-plugin
# or pnpm add, yarn add, bun add
```

After installation, simply add the plugin to your `docmd.config.json` using its exact package name as the key:

```json
{
  "plugins": {
    "my-custom-plugin": {
      "someOption": true
    }
  }
}
```

If the plugin fulfills docmd's plugin requirements, it will be automatically loaded and activated during the build. If it is not recognized or fails to load, docmd will report an error in the console.

## Plugin Scopes and `noStyle` Overrides

Plugins inject CSS and behaviour by default globally across all pages. However, you can explicitly configure them to bypass specific pages or entirely disable their execution on unstyled landing templates (`noStyle: true`).

### Global Config Extent

You can instruct any plugin to automatically skip injecting into `noStyle` pages via your `docmd.config.json`:

```json
{
  "plugins": {
    "math": {
      "noStyle": false
    }
  }
}
```

### Page Local Scope (Frontmatter)

Regardless of your global config (or what the plugin developer set by default), you can definitively enable or disable any plugin uniquely per-document via markdown frontmatter.

```markdown
---
noStyle: true
plugins:
  math: true
  threads: false
---

# Only Math renders here, Threads are completely blocked
```

## Plugin Lifecycle

Plugins hook into different stages of the build and development process:

| Hook | Description |
| :--- | :--- |
| `markdownSetup(md, opts)` | Extend the Markdown parser with custom rules or containers |
| `generateMetaTags(config, page, root)` | Inject `<meta>` and `<link>` tags into the `<head>` |
| `generateScripts(config, opts)` | Inject scripts into `<head>` or `</body>` |
| `getAssets(opts)` | Define external files or CDN scripts to inject |
| `onPostBuild(ctx)` | Run logic after all HTML files are generated |
| `translations(localeId)` | Return translated UI strings for a locale |
| `actions` | Server-side handlers callable from the browser via WebSocket RPC |
| `events` | Fire-and-forget handlers for browser-pushed events |

## Plugin Safety

The plugin system provides built-in safety guarantees:

- **Validation**: Plugins can declare a `plugin` descriptor with `name`, `version`, and `capabilities`. Invalid descriptors are rejected at load time.
- **Isolation**: Every hook invocation is wrapped in a try/catch boundary. A broken plugin cannot crash the build or affect other plugins.
- **Capability Enforcement**: Plugins that declare capabilities can only register for hooks they've explicitly declared. Undeclared hooks are skipped with a warning.

See [Building Plugins](building-plugins.md) for the full API reference.

::: callout tip "AI-Transparent Architecture :robot:"
The plugin architecture is designed to be **deterministic**. Every meta-tag and script injected by a plugin is traceable, allowing AI agents (and human developers) to understand exactly how the site behaves without hidden side effects.
:::